# referai-springboot

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  pom.xml
frontend/: middleware.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/messages/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/referrers/: page.tsx
frontend/components/dashboard/: JobDescriptionInput.tsx  NotificationBell.tsx  PersonaCard.tsx
frontend/components/landing/: FeaturesGrid.tsx  Footer.tsx  HowItWorks.tsx  Magnetic.tsx  MatchmakingWorkflow.tsx  NetworkDemo.tsx  ReferralAsk.tsx  SocialProof.tsx
frontend/components/ui/: FileUpload.tsx  (+3 more)
frontend/lib/: utils.ts  websocket.ts
frontend/tests/: smoke-check.mjs
referai-ai-service/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
referai-ai-service/app/: main.py
referai-ai-service/app/agents/coach/: graph.py  nodes.py  state.py
referai-ai-service/app/agents/matching/: graph.py  nodes.py  state.py
referai-ai-service/app/api/: router.py
referai-ai-service/app/api/routes/: coach.py  document.py  health.py  indexing.py  matching.py  outcomes.py  outreach.py
referai-ai-service/app/core/: config.py  logging.py  vector.py
referai-ai-service/app/db/: migration_runner.py  postgres.py  redis.py
referai-ai-service/app/middleware/: internal_auth.py
referai-ai-service/app/schemas/: coach.py  document.py  health.py  indexing.py  matching.py  outcomes.py  outreach.py
referai-ai-service/app/services/: coach_service.py  document_extractor.py  embedding_service.py  gemini_client.py  indexing_service.py  job_scraper.py  llm_client.py  matching_service.py  outcome_service.py  outreach_service.py
referai-ai-service/migrations/sql/: V5__add_embeddings.sql  V6__referral_outcomes.sql  V7__coach_advice_log.sql  V8__matching_history_and_feedback.sql
referai-ai-service/tests/: test_api_contracts.py  test_health.py
(+97 files in other folders)
